--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -1,30 +1,24 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: cluster-issuer
 spec:
+  entryPoints:
+  - websecure
   tls:
-  - hosts:
-    - {{ .Values.host }}
     secretName: tls
-  rules:
-  - host: {{ .Values.host }}
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: frontend
-            port:
-              number: 80
-      - pathType: Prefix
-        path: "/api"
-        backend:
-          service:
-            name: backend
-            port:
-              number: 80
+  routes:
+  - match: Host(`{{ .Values.host }}`)
+    kind: Rule
+    services:
+    - name: frontend
+      kind: Service
+      port: 80
+  - match: Host(`{{ .Values.host }}`) && PathPrefix(`/api`)
+    kind: Rule
+    services:
+    - name: backend
+      kind: Service
+      port: 80
