--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,13 @@
     "apollo-upload-client": "17.0.0",
     "babel-plugin-module-resolver": "4.1.0",
     "bootstrap": "5.1.3",
+    "jwt-decode": "3.1.2",
     "graphql": "16.3.0",
     "react": "18.0.0",
     "react-bootstrap": "2.2.3",
     "react-dom": "18.0.0",
     "react-router-dom": "6.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@craco/craco": "6.4.3",
@@ -22,9 +23,9 @@
     "serve": "13.0.2"
   },
   "scripts": {
-    "watch": "PORT=80 craco start",
+    "watch": "PORT=443 craco start",
     "build": "craco build",
-    "start": "serve -s build -l 80",
+    "start": "serve -s build -l 443",
     "test": "craco test"
   },
   "eslintConfig": {
